# medical-screening

./: .env  README.md  main.py  pyproject.toml
assets/: Drs Data.xlsx
docs/: Reply.docx  screening-project.docx  ~$Reply.docx
helpers/: __init__.py  config.py  parser.py
notebooks/: skills_testing.ipynb
src/screening/: app.py  llm.py  model_test.py  old_version_app.py  preprocessing.py  prompts.py  recommender.py
